--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<div id="game"></div>
 	<script>
 		var app = Elm.Main.init({
-			node: document.getElementById('game')
+			node: document.getElementById('game'),
+			flags: window.screen.width
 		});
 	</script>
 </body>
