--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<div id="game"></div>
 	<script>
 		var app = Elm.Main.init({
-			node: document.getElementById('game'),
-			flags: window.screen.width
+			node: document.getElementById('game')
 		});
 	</script>
 </body>
